<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    android:background="@color/bg_app">

    <Button
        android:id="@+id/btnDarkModeMain"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:text="🌙"
        android:backgroundTint="#34495E" />

    <com.example.xat.StatusView
        android:id="@+id/connectionStatus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Connexió"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:textColor="@color/text_main"/>

    <EditText
        android:id="@+id/etHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Adreça Host (IP)"
        android:padding="12dp"
        android:background="@drawable/bg_edittext"
        android:layout_marginBottom="15dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/etPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Port"
        android:inputType="number"
        android:padding="12dp"
        android:background="@drawable/bg_edittext"
        android:layout_marginBottom="40dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="CONNECTAR"
        android:backgroundTint="@color/button_orange" />

    <Button
        android:id="@+id/btnVerAutor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="FAQ / AJUDA"
        android:layout_marginTop="15dp"
        android:backgroundTint="#34495E"/>

</LinearLayout>